--- a/package.json
+++ b/package.json
@@ -1,157 +1,38 @@
 {
-  "name": "@goblindegook/gatsby-starter-typescript",
-  "description": "A Gatsby starter the way I like it.",
+  "name": "lucaswickstrom.com",
   "version": "1.0.0",
-  "author": "Luís Rodrigues <hello@goblindegook.com>",
+  "repository": "git@github.com:lucaswickstrom/lucaswickstrom.com.git",
+  "author": "Lucas Wickström <lucaswickstrom@gmail.com>",
+  "scripts": {
+    "dev": "gatsby develop",
+    "build": "gatsby build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
   "dependencies": {
-    "@emotion/core": "^10.0.4",
-    "@emotion/styled": "^10.0.4",
-    "@mdx-js/mdx": "^1.0.20",
-    "@mdx-js/react": "^1.0.20",
-    "@pacote/react-use-outside": "^1.0.2",
-    "@reach/router": "^1.2.0",
-    "@types/lunr": "^2.1.6",
-    "core-js": "^3.1.4",
-    "emotion": "^10.0.4",
-    "emotion-server": "^10.0.4",
-    "gatsby": "^2.0.7",
-    "gatsby-plugin-catch-links": "^2.0.2",
-    "gatsby-plugin-emotion": "^4.0.4",
-    "gatsby-plugin-feed": "^2.0.5",
-    "gatsby-plugin-lunr": "^1.2.0",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-mdx": "^1.0.17",
-    "gatsby-plugin-netlify": "^2.0.0",
-    "gatsby-plugin-nprogress": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-sitemap": "^2.0.1",
-    "gatsby-plugin-typescript": "^2.0.0",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^3.0.6",
-    "gatsby-remark-prismjs": "^3.2.6",
-    "gatsby-remark-smartypants": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.6.10",
-    "gatsby-transformer-sharp": "^2.1.1",
-    "gray-percentage": "^2.0.0",
-    "lodash": "^4.17.5",
-    "lunr": "^2.3.3",
-    "normalize.css": "^8.0.0",
-    "prismjs": "^1.15.0",
-    "ramda": "^0.26.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.2.0",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "regenerator-runtime": "^0.13.2",
-    "typeface-domine": "^0.0.72",
-    "typeface-montserrat": "^0.0.75",
-    "typography": "^0.16.17",
-    "typography-breakpoint-constants": "^0.16.18"
+    "@emotion/eslint-plugin": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "gatsby": "^2.27.4",
+    "gatsby-plugin-emotion": "^5.1.0-next.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/polyfill": "^7.2.5",
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.1",
-    "@types/jest": "^24.0.9",
-    "@types/lodash": "^4.14.104",
-    "@types/node": "^12.0.8",
-    "@types/ramda": "^0.26.3",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-helmet": "^5.0.5",
-    "@types/typography": "^0.16.0",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^3.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
-    "lint-staged": "^9.0.1",
-    "prettier": "^1.11.1",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.19.1"
-  },
-  "keywords": [
-    "gatsby",
-    "markdown",
-    "typescript"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
-    "format": "prettier --write '{__mocks__,src,test}/**/*.{ts,tsx}' '*.js'",
-    "prebuild": "yarn lint && yarn test",
-    "lint": "eslint '{__mocks__,src,test}/**/*.{js,ts,tsx}'",
-    "test": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "eslint",
-      "git add"
-    ],
-    "*.{js,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-dom/extend-expect",
-      "@testing-library/react/cleanup-after-each",
-      "./setup-jest.js"
-    ],
-    "globals": {
-      "__PATH_PREFIX__": ""
-    },
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(tsx?|jsx?)$": "ts-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(gatsby)/)"
-    ],
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
-    "testPathIgnorePatterns": [
-      "node_modules",
-      ".cache"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "moduleNameMapper": {
-      "typeface-*": "identity-obj-proxy",
-      ".+\\.(css|styl|less|sass|scss)$": "identity-obj-proxy",
-      ".+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/file.js"
-    },
-    "collectCoverage": false,
-    "coverageReporters": [
-      "lcov",
-      "text",
-      "html"
-    ]
+    "@types/eslint": "^7.2.5",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "babel-preset-gatsby": "^0.7.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
+    "prettier": "^2.2.1"
   }
 }
