--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,16 @@
+
 {
+  "include": ["./src/**/*"],
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": ["dom", "esnext"],
+    "jsx": "react-jsx",
+    "strict": true,
     "esModuleInterop": true,
-    "allowJs": true,
-    "declaration": false,
-    "importHelpers": true,
-    "jsx": "react",
-    "lib": ["dom", "es2015", "es2017"],
-    "module": "commonjs",
-    "noEmitHelpers": false,
-    "noImplicitAny": true,
-    "noResolve": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "target": "esnext"
-  },
-  "include": ["./src/**/*", "./test/**/*"]
+    "noEmit": true,
+    "skipLibCheck": true,
+    "types": ["@emotion/react/types/css-prop"]
+  }
 }
