--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.0.0",
     "gatsby": "^2.27.4",
     "gatsby-plugin-emotion": "^5.1.0-next.0",
+    "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
