--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.0.0",
     "gatsby": "^2.27.4",
     "gatsby-plugin-emotion": "^5.1.0-next.0",
-    "gatsby-plugin-google-analytics": "^2.6.0",
+    "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
