--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@emotion/eslint-plugin": "^11.0.0",
-    "@emotion/react": "^11.1.1",
-    "@emotion/styled": "^11.0.0",
-    "gatsby": "^2.27.4",
-    "gatsby-plugin-emotion": "^5.1.0-next.0",
-    "gatsby-plugin-google-gtag": "^2.8.0",
-    "gatsby-plugin-react-helmet": "^3.5.0",
+    "@emotion/eslint-plugin": "^11.2.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "gatsby": "^3.1.2",
+    "gatsby-plugin-emotion": "^6.1.0",
+    "gatsby-plugin-google-gtag": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-sitemap": "^3.1.0",
     "pure-react-carousel": "^1.27.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/eslint": "^7.2.5",
+    "@types/eslint": "^7.2.7",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "babel-preset-gatsby": "^0.7.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "babel-preset-gatsby": "^1.1.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-simple-import-sort": "^6.0.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.2.1"
   }
 }
