--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/eslint": "^7.28.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/react-helmet": "^6.1.2",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-preset-gatsby": "^1.9.0",
@@ -37,6 +38,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "sharp": "^0.28.3",
+    "sharp-loader": "^2.0.0"
   }
 }
