--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "esModuleInterop": true,
     "noEmit": true,
     "skipLibCheck": true,
-    "types": ["@emotion/react/types/css-prop"]
+    "types": ["@emotion/react/types/css-prop", "webpack-env"]
   }
 }
