--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
   "name": "lucaswickstrom.com",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "type": "module",
   "repository": "git@github.com:lucaswickstrom/lucaswickstrom.com.git",
   "author": "Lucas Wickström <lucaswickstrom@gmail.com>",
   "scripts": {
-    "dev": "gatsby develop",
-    "build": "gatsby build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "rome check src"
   },
   "dependencies": {
-    "@emotion/eslint-plugin": "^11.2.0",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "gatsby": "^3.9.1",
-    "gatsby-plugin-emotion": "^6.9.0",
-    "gatsby-plugin-google-gtag": "^3.9.0",
-    "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sitemap": "^4.5.0",
-    "pure-react-carousel": "^1.27.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "typescript": "^4.3.5"
+    "@radix-ui/react-dialog": "^1.0.4",
+    "framer-motion": "^10.15.1",
+    "lucide-react": "0.263.1",
+    "next": "13.4.13",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/eslint": "^7.28.0",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.2",
-    "@types/webpack-env": "^1.16.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "babel-preset-gatsby": "^1.9.0",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "prettier": "^2.3.2",
-    "sharp": "^0.28.3",
-    "sharp-loader": "^2.0.0"
-  }
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "20.4.10",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "rome": "12.1.3",
+    "typescript": "5.1.6"
+  },
+  "license": "MIT"
 }
