--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "rome check src"
+    "lint": "biome check src"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.4",
-    "framer-motion": "^10.15.1",
-    "lucide-react": "0.263.1",
-    "next": "13.4.13",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "usehooks-ts": "^2.9.1"
+    "@radix-ui/react-dialog": "^1.1.2",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "0.460.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
+    "postcss": "8.4.49",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "3.4.15",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "20.4.10",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "rome": "12.1.3",
-    "typescript": "5.1.6"
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "autoprefixer": "10.4.20",
+    "typescript": "5.6.3"
   },
   "license": "MIT"
 }
