--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "biome check src"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "framer-motion": "^11.11.17",
     "lucide-react": "0.460.0",
